[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/game/Game.gd" type="Script" id=1]
[ext_resource path="res://source/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/camera/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/game/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://graphics/fonts/pixelmix/pixelmix.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://graphics/images/interface/white.png" type="Texture" id=6]
[ext_resource path="res://source/interface/GameOver.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Bullets" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 283.204, 886.753 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
anchor_mode = 0
current = true

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_top = 805.0
margin_right = 10.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0, 0, 0, 0.588235 )
tint_progress = Color( 0.717647, 0.831373, 0.870588, 1 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false
[connection signal="health_depleted" from="Player" to="." method="_on_Player_health_depleted"]
[connection signal="shot_fired" from="Player" to="." method="_on_Player_shot_fired"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
